[gd_scene load_steps=6 format=3 uid="uid://1uhcfuu5wofx"]

[ext_resource type="Script" path="res://Barrel.gd" id="1_cdri6"]
[ext_resource type="Texture2D" uid="uid://25kjhwry00dq" path="res://Assets/environmental stuff/barrelParts/barrelPart_1.png" id="3_ks5lx"]
[ext_resource type="Texture2D" uid="uid://djbihsu736dns" path="res://Assets/environmental stuff/barrelParts/barrelPart_0.png" id="4_0nguq"]
[ext_resource type="Texture2D" uid="uid://cr3ovmep2pgmb" path="res://Assets/environmental stuff/barrelParts/barrelPart_2.png" id="5_ohjeh"]
[ext_resource type="Texture2D" uid="uid://bo6thdmwd8t0y" path="res://Assets/environmental stuff/barrelParts/barrelPart_3.png" id="6_xdfdv"]

[node name="Barrel" type="Node2D"]
script = ExtResource("1_cdri6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1

[node name="Node2D" type="Node2D" parent="."]

[node name="barrelPart1" type="RigidBody2D" parent="Node2D"]
disable_mode = 1
collision_layer = 1024
freeze = true

[node name="Sprite2D" type="Sprite2D" parent="Node2D/barrelPart1"]
texture_filter = 1
texture = ExtResource("3_ks5lx")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/barrelPart1"]
visible = false
polygon = PackedVector2Array(11, -10.5, 12, -7.6, 12, -3.5, 11.2, -3.5, 7, -2.7, 7, -1.9, 8.2, -0.7, 7.7, 0.5, 6, 0.5, 6, 3.5, 3.2, 3.5, 0, 5.1, 0, 3.5, -2, 3.5, -2, 1.9, -5.4, -1.5, -9, -1.5, -9, -4.3, -9.8, -7.5, -12, -7.5, -12, -11.5, -11, -11.5, -11, -13.5, 11, -13.5)

[node name="barrelPart2" type="RigidBody2D" parent="Node2D"]
disable_mode = 1
collision_layer = 1024
freeze = true

[node name="Sprite2D" type="Sprite2D" parent="Node2D/barrelPart2"]
texture_filter = 1
texture = ExtResource("4_0nguq")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/barrelPart2"]
visible = false
polygon = PackedVector2Array(-8, -4.7, -7.4, -3.5, -4.6, -3.5, 3.2, 4.3, 2.7, 5.5, -2.1, 5.5, -6, 4.7, -12, 8.7, -12, -8.5, -12, -9.5, -8, -9.5)

[node name="barrelPart3" type="RigidBody2D" parent="Node2D"]
disable_mode = 1
collision_layer = 1024
freeze = true

[node name="Sprite2D" type="Sprite2D" parent="Node2D/barrelPart3"]
texture_filter = 1
texture = ExtResource("5_ohjeh")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/barrelPart3"]
visible = false
polygon = PackedVector2Array(12, -4.5, 12, 8.5, 11, 13.5, 1.4, 13.5, -3, 10, -3, 6.5, -1.3, 6.5, 1, 5, 1, 3.1, 2.6, 1.5, 4, 1.5, 4, -1.5, 5.9, -1.5, 4.4, -4.5, 10, -4.5, 10, -5.5, 11.9, -5.5)

[node name="barrelPart4" type="RigidBody2D" parent="Node2D"]
disable_mode = 1
collision_layer = 1024
freeze = true

[node name="Sprite2D" type="Sprite2D" parent="Node2D/barrelPart4"]
texture_filter = 1
texture = ExtResource("6_xdfdv")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/barrelPart4"]
visible = false
polygon = PackedVector2Array(3, 3.6, 3, 6.1, -1, 8.1, -0.6, 8.5, 4.2, 13.3, -11, 13.5, -12, 6.9, -12, 5.5, -9.4, 5.5, -8, 4.1, -8, 2.4)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(11, -10.8, 12, -9.3, 12, 8.5, 11, 13.5, -11, 13.5, -11, 10.8, -12, 9.3, -12, -8.5, -11, -10.5, -11, -13.5, 11, -13.5)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
